# bomctl-sbomit-example

./: README.md  bomctl.cdx.json  clone.210dcc50.link  pyproject.toml  sbomit.sh
attestations/: build.210dcc50.link  vendor-dependencies.210dcc50.link
