[tool.poetry]
name = "bomctl-sbomit-example"
version = "0.1.0"
description = ""
authors = ["Ian Dunbar-Hall <ian.dunbar-hall@lmco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
in-toto = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
